--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
+server.port=8090
 jwt.secret=supersecret
 
-app.client.url=http://localhost:4200/*
+#app.client.url=http://localhost:4200/*
+app.client.url=http://localhost:61486/*
