--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 jwt.secret=supersecret
 
 app.client.url=http://localhost:4200/*
+server.port=8087
