--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ jwt.secret=supersecret
 
 app.client.url=http://localhost:4200/*
 server.port=8087
+spring.servlet.multipart.max-file-size=1000000MB
+spring.servlet.multipart.max-request-size=1000000MB
