before the globa merge

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,11 @@ server.port=8089
 jwt.secret=supersecret
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=abdessalam.bahri@esprit.tn
-spring.mail.password=Irhab123&
+spring.mail.username=melekbejaoui29@gmail.com
+spring.mail.password=aklu fzub ghfg emsz
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
 #mailgun.domain=sandboxe4ae51d8a1fa46418177c60896254fd6.mailgun.org
 #mailgun.api-key=pubkey-4c68e6ef01b65fde894cc31fe82b5f01
 app.client.url=http://localhost:4200/*
