--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Backend
 #data source properties
 
-spring.datasource.url=jdbc:mysql://localhost:3306/clubet?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:8111/clubet?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 
@@ -17,5 +17,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 jwt.secret=supersecret
-
+spring.servlet.multipart.max-file-size=1000000MB
+spring.servlet.multipart.max-request-size=1000000MB
 app.client.url=http://localhost:4200/*
