--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/clubs?useUnicode=true&useJDBCC
 
 spring.datasource.username=root
 spring.datasource.password=
-
-spring.jpa.hibernate.ddl-auto=update
+server.port=8089
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 jwt.secret=supersecret
 spring.mail.host=smtp.gmail.com
